--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "add": "^2.0.6",
+    "axios": "^0.26.1",
     "dayjs": "^1.11.0",
     "next": "^12.1.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "dev": "next dev",
